appId: host.exp.exponent
---
- launchApp:
    clearState: true
- tapOn: "Enter URL manually"
- tapOn: "exp://"
- inputText: "exp://tcvey0y-anonymous-8081.exp.direct"
- tapOn: "Connect"
- extendedWaitUntil:
    visible: "This is the developer menu. It gives you access to useful tools in Expo Go."
    timeout: 10000
- tapOn:
    point: 4%,47%
- tapOn: "Admin"
- scrollUntilVisible: 
    element: "Abrir painel"
- tapOn: "Senha do admin"
- inputText: "adminadmin"
- hideKeyboard
- tapOn: "Abrir painel"
- tapOn: "Gerenciar lotes"
- tapOn: "Título do lote"
- inputText: "Teste no Maestro"
- hideKeyboard
- tapOn: "Descrição"
- inputText: "teste123"
- hideKeyboard
- tapOn: "Ativo"
- tapOn: "5m"
- scrollUntilVisible: 
    element: "Criar lote"
- tapOn: "Criar lote"